Added extra code

--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
   </head>
   <body>
     <header id="top">
-      <h1>Prework Study Guide</h1>
+      <h1>Kek Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
+    <h1>What's good, my guys </h1>
+    <ol>
+      <li>Very</li>
+      <li>Quite</li>
+      <li>Not much</li>
+    </ol>
+    <br />
+    <a href="https://www.facebook.com">Facebook link!</a>
+    <br >
+    <img
+      src="https://buffer.com/cdn-cgi/image/w=1000,fit=contain,q=90,f=auto/library/content/images/size/w600/2020/05/Frame-9.png" alt="Image of a girl jumping." />
+
     <main>
       <!-- Student code goes here -->
     </main>
