--- a/Test index.html
+++ b/Test index.html
@@ -11,6 +11,18 @@
       <h1>Kek Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
+    <h1 alt="TEST CODE">What's good, my guys </h1>
+    <ol alt="MORE TEST CODE">
+      <li>Very</li>
+      <li>Quite</li>
+      <li>Not much</li>
+    </ol>
+    <br />
+    <a href="https://www.facebook.com" alt="TEST Link to facebook">Facebook link!</a>
+    <br >
+    <img
+      src="https://buffer.com/cdn-cgi/image/w=1000,fit=contain,q=90,f=auto/library/content/images/size/w600/2020/05/Frame-9.png" alt="TEST Image of a girl jumping." />
+
     <main>
       <section class="card" id="html-section">
         <h2>HTML</h2>
