--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git add -A     Add changed files from working directory to the staging area of Git.</li>
+          <li>git commit -m "Insert change notes here"      Commit the changes to the repository.</li>
+          <li>git pull origin main       Use this to pull in the base branch.</li>
+          <li>git push origin feature/*Whatever the feature name is*      Use this to push the changes to GitHub.</li>
         </ul>
       </section>
    
