Added CSS to project.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -25,10 +26,12 @@
         </ul>
       </section>
    
-      <section class="card" id="css-section">
+      <section class="egg" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter CSS notes here.</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>Refer to style.css for various fomartting commands and tips.</li>
         </ul>
       </section>
       
@@ -41,6 +44,7 @@
           <li>git commit -m "Insert change notes here"      Commit the changes to the repository.</li>
           <li>git pull origin main       Use this to pull in the base branch.</li>
           <li>git push origin feature/*Whatever the feature name is*      Use this to push the changes to GitHub.</li>
+          <li>git checkout main    Returns the user back to the main branch.</li>
         </ul>
       </section>
    
