Updated font colour

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <style>
       h1 {
-        color:green;
+        color:black;
       }
       h2 {
-        color:orange;
+        color:red;
       }
     </style>
     <meta charset="UTF-8" />
