--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="https://web-dev.imgix.net/image/vS06HQ1YTsbMKSFTIPl2iogUQP73/KAOmqplghJT2PrJlOgZ5.png?auto=format">
     <link rel="stylesheet" href="./assets/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -67,5 +69,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
