Added js to branch

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         color:black;
       }
       h2 {
-        color:red;
+        color:black;
       }
     </style>
     <meta charset="UTF-8" />
@@ -21,6 +21,7 @@
     <header id="top">
       <h1>Kek Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -59,7 +60,7 @@
       </section>
    
       <section class="card" id="javascript-section">
-        <h2 style="color:red">JavaScript</h2>
+        <h2 style="color:black">JavaScript</h2>
         <ul>
           <li>Enter JavaScript notes here.</li>
         </ul>
@@ -69,6 +70,8 @@
     <footer>
       <p>I can code!</p>
     </footer>
-    <script src="scripts/main.js"></script>
+    <script src="./assets/script.js"></script>
+
+    <!--<script src="scripts/main.js"></script>-->
   </body>
 </html>
