--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <ul>
           <li>A variable is a named container that allows us to store data in our code.</li>
           <li>Control flow is the order in which a computer executes code in a script.</li>
-          <li>Refer to https://htmlcheatsheet.com/js/ for code cheat sheets.</li>
+          <li>Refer to https://htmlcheatsheet.com/js/ for code cheat sheets!</li>
         </ul>
       </section>
     </main>
