--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </ul>
       </section>
    
-      <section class="egg" id="css-section">
+      <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
           <li>A margin indicates how much space we want around the outside of an element.</li>
@@ -73,7 +73,5 @@
       <p>I can code!</p>
     </footer>
     <script src="./assets/script.js"></script>
-
-    <!--<script src="scripts/main.js"></script>-->
   </body>
 </html>
